--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   file_picker: ^4.3.2
   # Progress Indicator
   percent_indicator: ^4.0.0
+  # SVG
+  flutter_svg: ^0.22.0
 
 dev_dependencies:
   flutter_test:
