--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   # Local Cache
   shared_preferences: ^2.0.6
   # Internet Checker
-  internet_connection_checker: ^0.0.1+3
+  connectivity_plus: ^2.1.0
   # State Management
   flutter_bloc: ^7.3.0
   # Dialog
