--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ version: 1.0.0+1
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
+dependency_overrides:
+  cloud_firestore_platform_interface: 5.4.13
+
 dependencies:
   flutter:
     sdk: flutter
@@ -52,8 +55,9 @@ dependencies:
   # Change app launcher icons
   flutter_launcher_icons: ^0.9.2
   # Firebase
-  firebase_core: ^1.10.6
-  firebase_analytics: ^9.0.4
+  firebase_core: ^1.6.0
+  # firebase_analytics: ^9.0.4
+  cloud_firestore: ^2.5.1
   # Check Update app status
   new_version: ^0.2.3
   # File picker
