--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,8 @@ dependencies:
   flutter_svg: ^0.22.0
   # intl
   intl: ^0.17.0
+  # keyboard
+  numeric_keyboard: ^1.1.0
 
 dev_dependencies:
   flutter_test:
