--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,11 @@ dev_dependencies:
     sdk: flutter
   web3dart: ^2.3.3
 
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/app-icon.png"
+
 flutter:
 
   uses-material-design: true
