--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,8 @@ dependencies:
   permission_handler: ^8.1.6
   # Path provider
   path_provider:
+  # Notification
+  onesignal_flutter: ^3.0.0
 
 dev_dependencies:
   flutter_test:
